@@ -27,14 +27,22 @@ public class FoodParcel extends OrderFood implements Parcelable{
 		orderDate  = food.orderDate;
 		waiter = food.waiter == null ? "" : food.waiter;
 		tasteNormalPref = new String(food.tasteNormalPref);
-		setTasteNormalPrice(new Float(food.getTasteNormalPrice()));
-		setCount(new Float(food.getCount()));
-		setPrice(new Float(food.getPrice()));
+		setTasteNormalPrice(Float.valueOf(food.getTasteNormalPrice()));
+		setCount(Float.valueOf(food.getCount()));
+		setPrice(Float.valueOf(food.getPrice()));
 		if(food.tmpTaste != null){
 			tmpTaste = food.tmpTaste;
 		}else{
 			tmpTaste = new Taste();
 			tmpTaste.aliasID = Integer.MIN_VALUE;
+		}
+		if(food.popTastes != null){
+			popTastes = new Taste[food.popTastes.length];
+			for(int i = 0; i < food.popTastes.length; i++){
+				popTastes[i] = new TasteParcel(food.popTastes[i]);
+			}
+		}else{
+			popTastes = new Taste[0];
 		}
 	}
 	
@@ -55,10 +63,15 @@ public class FoodParcel extends OrderFood implements Parcelable{
 		ArrayList<TasteParcel> tasteParcels = new ArrayList<TasteParcel>();
 		in.readTypedList(tasteParcels, TasteParcel.CREATOR);
 		tastes = tasteParcels.toArray(new Taste[tasteParcels.size()]);
+		//un-marshal the temporary taste
 		tmpTaste = new TasteParcel(in);
 		if(tmpTaste.aliasID == Integer.MIN_VALUE){
 			tmpTaste = null;
 		}
+		//un-marshal the most popular taste references
+		ArrayList<TasteParcel> popTasteParcels = new ArrayList<TasteParcel>();
+		in.readTypedList(popTasteParcels, TasteParcel.CREATOR);
+		popTastes = popTasteParcels.toArray(new Taste[popTasteParcels.size()]);
 	}
 	
 	public static final Parcelable.Creator<FoodParcel> CREATOR = new Parcelable.Creator<FoodParcel>() {
@@ -96,6 +109,13 @@ public class FoodParcel extends OrderFood implements Parcelable{
 			tasteParcels.add(new TasteParcel(tastes[i]));
 		}
 		parcel.writeTypedList(tasteParcels);
+		//marshal the temporary taste
 		new TasteParcel(tmpTaste).writeToParcel(parcel, flags);
+		//marshal the most popular taste references
+		ArrayList<TasteParcel> popTasteParcels = new ArrayList<TasteParcel>(popTastes.length);
+		for(int i = 0; i < popTastes.length; i++){
+			popTasteParcels.add(new TasteParcel(popTastes[i]));
+		}
+		parcel.writeTypedList(popTasteParcels);
 	}
 }
